# WindowShooter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/Bullet/: Bullet.h
include/Character/: Character.h  Player.h
include/Input/: InputProcessor.h
include/Utilities/: Vector2.h
src/: main.cpp
src/Bullet/: Bullet.cpp
src/Character/: Character.cpp  Player.cpp
src/Input/: InputProcessor.cpp
